--- a/index.html
+++ b/index.html
@@ -7,5 +7,10 @@
 </head>
 <body>
     
+    <h1>Enter Your Details For Our Dating Website</h1>
+    <legend>Your Face</legend>
+        <div><input type="file" id="avatar" name="avatar"><label for="avatar">Upload your image</label></div>
+        
+
 </body>
 </html>
