Created fieldset + img preview

--- a/index.html
+++ b/index.html
@@ -3,13 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Dating Website</title>
 </head>
 <body>
     
     <h1>Enter Your Details For Our Dating Website</h1>
+    <fieldset>
     <legend>Your Face</legend>
-        <div><input type="file" id="avatar" name="avatar"><label for="avatar">Upload your image</label></div>
+        <div><input type="file" id="avatar" name="avatar", required><label for="avatar">Upload your image</label></div>
+        Image Preview: <img id="preview", width="500">
+    </fieldset> 
         
 
 </body>
