Gender form section

--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
         <div>
             <label>Gender</label>
             <input type="radio" id="woman" name="gender" value="women" required>
+            <label for="women">Women</label>
+            <input type="radio" id="man" name="gender" value="man">
+            <label for="man">Man</label>
         </div>
     </fieldset>
 
