--- a/index.html
+++ b/index.html
@@ -31,6 +31,43 @@
             <input type="radio" id="man" name="gender" value="man">
             <label for="man">Man</label>
         </div>
+
+        <div>
+            <label for="age">Age</label>
+            <input type="number" id="age" name="age"> 
+        </div>
+
+        <div>
+            <label for="dob">Date Of Birth</label>
+            <input type="date" id="dob" name="dob">
+        </div>
+
+        <div>
+            <label for="color">Favorite Color</label>
+            <input type="color" id="color" name="color">
+        </div>
+
+        <div>
+            <label for="country">Country</label>
+            <select id="country", name="country">
+                <option value="brazil">Brazil</option>
+                <option value="france">France</option>
+                <option value="japan">Japan</option>
+                <option value="libya">Libya</option>
+                <option value="usa">USA</option>
+            </select>
+        </div>
+
+        <div>
+            <label for="salary">Salary</label>
+            <span class="range-caption">Poor</span>
+            <input type="range" id="salary" name="salary" min="0" max="100" value="50">
+            <span class="range-caption">Rich</span>
+        </div>
+    </fieldset>
+
+    <fieldset>
+        <legend>Your Contact Information</legend>
     </fieldset>
 
 </body>
