--- a/index.html
+++ b/index.html
@@ -90,8 +90,10 @@
             <input type="checkbox" name="contact" id="phoneCheckbox" value="phone">
             <label for="phoneCheckbox">Phone</label>
         </div>
-
     </fieldset>
 
+    <div>
+        <input type="submit">
+    </div>
 </body>
 </html>
