--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     
 <h1>Enter Your Details For Our Dating Website</h1>
+<form action="https://us-central1-nucamp-production.cloudfunctions.net/post/formdata" method="post" enctype="multipart/form-data"></form>
     <fieldset>
         <legend>Your Face</legend>
         <div>
